@@ -18,6 +18,7 @@ Bugs fixed:
 - 2825221 No validation for PersistenceType property
 - 2727830 No valid variable in error message in cimXmlGen.c 
 - 2833403 sfcc calls unable to log
+- 2833542 Possible leak in CMPIContext addEntry
 
 Changes in 1.3.4
 ================
